Updated with Java 21

--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/20/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/21/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,101 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-21-panel">
+      <div class="panel-heading" id="java-21-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21-content" aria-controls="java-21-content">
+          Java 21
+        </a>
+      </div>
+      <div class="collapse" id="java-21-content" aria-labelledby="java-21-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-21_java-desktop-panel" data-filter-value="java.desktop">
+            <div class="panel-heading" id="java-21_java-desktop-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-desktop-content" aria-controls="java-21_java-desktop-content">
+                java.desktop
+              </a>
+            </div>
+            <div class="collapse" id="java-21_java-desktop-content" aria-labelledby="java-21_java-desktop-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-21_java-desktop_javax-swing-plaf-synth-panel" data-filter-value="javax.swing.plaf.synth">
+                  <div class="panel-heading" id="java-21_java-desktop_javax-swing-plaf-synth-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-desktop_javax-swing-plaf-synth-content" aria-controls="java-21_java-desktop_javax-swing-plaf-synth-content">
+                      javax.swing.plaf.synth
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-21_java-desktop_javax-swing-plaf-synth-content" aria-labelledby="java-21_java-desktop_javax-swing-plaf-synth-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-panel" data-filter-value="javax.swing.plaf.synth.SynthLookAndFeel">
+                        <div class="panel-heading" id="java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-content" aria-controls="java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-content">
+                            SynthLookAndFeel
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-content" aria-labelledby="java-21_java-desktop_javax-swing-plaf-synth-SynthLookAndFeel-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.desktop/javax/swing/plaf/synth/SynthLookAndFeel.html#load(java.net.URL)" rel="external">
+                                    load(java.net.URL)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-21_java-management-panel" data-filter-value="java.management">
+            <div class="panel-heading" id="java-21_java-management-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-management-content" aria-controls="java-21_java-management-content">
+                java.management
+              </a>
+            </div>
+            <div class="collapse" id="java-21_java-management-content" aria-labelledby="java-21_java-management-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-21_java-management_javax-management-remote-panel" data-filter-value="javax.management.remote">
+                  <div class="panel-heading" id="java-21_java-management_javax-management-remote-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-management_javax-management-remote-content" aria-controls="java-21_java-management_javax-management-remote-content">
+                      javax.management.remote
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-21_java-management_javax-management-remote-content" aria-labelledby="java-21_java-management_javax-management-remote-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-21_java-management_javax-management-remote-JMXConnector-panel" data-filter-value="javax.management.remote.JMXConnector">
+                        <div class="panel-heading" id="java-21_java-management_javax-management-remote-JMXConnector-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-21_java-management_javax-management-remote-JMXConnector-content" aria-controls="java-21_java-management_javax-management-remote-JMXConnector-content">
+                            JMXConnector
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-21_java-management_javax-management-remote-JMXConnector-content" aria-labelledby="java-21_java-management_javax-management-remote-JMXConnector-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.management/javax/management/remote/JMXConnector.html#getMBeanServerConnection(javax.security.auth.Subject)" rel="external">
+                                    getMBeanServerConnection(javax.security.auth.Subject)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-20-panel">
       <div class="panel-heading" id="java-20-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-20-content" aria-controls="java-20-content">
@@ -1545,42 +1640,42 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#closeClient(javax.management.remote.rmi.RMIConnection)" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#closeClient(javax.management.remote.rmi.RMIConnection)" rel="external">
                                     closeClient(javax.management.remote.rmi.RMIConnection)
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#closeServer()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#closeServer()" rel="external">
                                     closeServer()
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#export()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#export()" rel="external">
                                     export()
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#getProtocol()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#getProtocol()" rel="external">
                                     getProtocol()
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#makeClient(java.lang.String,javax.security.auth.Subject)" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#makeClient(java.lang.String,javax.security.auth.Subject)" rel="external">
                                     makeClient(java.lang.String,javax.security.auth.Subject)
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#toStub()" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html#toStub()" rel="external">
                                     toStub()
                                   </a>
                                 </div>
@@ -3399,7 +3494,7 @@
                       </div>
                       <div class="panel panel-default java-class" id="java-9_java-base_java-lang-Compiler-panel" data-filter-value="java.lang.Compiler">
                         <div class="panel-heading" id="java-9_java-base_java-lang-Compiler-header">
-                          <a class="btn btn-link" href="java.base/java/lang/Compiler.html" rel="external">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/lang/Compiler.html" rel="external">
                             Compiler
                           </a>
                         </div>
@@ -5619,7 +5714,7 @@
                     <div class="panel-body">
                       <div class="panel panel-default java-class" id="java-9_java-management-rmi_javax-management-remote-rmi-RMIIIOPServerImpl-panel" data-filter-value="javax.management.remote.rmi.RMIIIOPServerImpl">
                         <div class="panel-heading" id="java-9_java-management-rmi_javax-management-remote-rmi-RMIIIOPServerImpl-header">
-                          <a class="btn btn-link" href="java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html" rel="external">
+                          <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/20/docs/api/java.management.rmi/javax/management/remote/rmi/RMIIIOPServerImpl.html" rel="external">
                             RMIIIOPServerImpl
                           </a>
                         </div>
